--- a/pom.xml
+++ b/pom.xml
@@ -34,8 +34,33 @@
 					<artifactId>junit-vintage-engine</artifactId>
 				</exclusion>
 			</exclusions>
-		</dependency>	
+		</dependency>
+		
+		<dependency>
+		<groupId>org.codehaus.mojo</groupId>
+		<artifactId>sonar-maven-plugin</artifactId>
+		<version>3.4.0.905</version>
+		<type>pom</type>
+		</dependency>		
 	</dependencies>
+	
+	<profiles>
+        <profile>
+            <id>sonar</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <properties>
+                <!-- Optional URL to server. Default value is http://localhost:9000 -->
+                <sonar.host.url> http://192.168.0.109:9000 </sonar.host.url>
+	
+ <!--  <sonar.jdbc.url>jdbc:postgresql://localhost/sonarqube</sonar.jdbc.url>
+<sonar.jdbc.username>sonar</sonar.jdbc.username>
+<sonar.jdbc.password>admin</sonar.jdbc.password>        -->                 
+
+            </properties>
+        </profile>
+     </profiles>
 
 	<build>
 		<plugins>
@@ -44,8 +69,16 @@
   				<artifactId>jib-maven-plugin</artifactId>
   				<version>2.1.0</version>
  				<configuration>
+    				<from>
+    					<image>openjdk-8:alpine</image>
+    				</from>
+    				<container>
+    				<ports>
+    					<port>8082</port>
+    				</ports>
+    				</container>
     				<to>
-      				<image>kumaranraj/jib-maven:mvn</image>
+      				<image>kumaranraj/jib-maven:v3</image>
     				</to>
   				</configuration>
 		    </plugin>
