--- a/pom.xml
+++ b/pom.xml
@@ -53,35 +53,25 @@
             <properties>
                 <!-- Optional URL to server. Default value is http://localhost:9000 -->
                 <sonar.host.url> http://192.168.0.109:9000 </sonar.host.url>
-	
  <!--  <sonar.jdbc.url>jdbc:postgresql://localhost/sonarqube</sonar.jdbc.url>
 <sonar.jdbc.username>sonar</sonar.jdbc.username>
-<sonar.jdbc.password>admin</sonar.jdbc.password>        -->                 
-
+<sonar.jdbc.password>admin</sonar.jdbc.password>  -->                 
             </properties>
         </profile>
      </profiles>
 
 	<build>
 		<plugins>
-			<plugin>
+		<!--  	<plugin>
   				<groupId>com.google.cloud.tools</groupId>
   				<artifactId>jib-maven-plugin</artifactId>
   				<version>2.1.0</version>
  				<configuration>
-    				<from>
-    					<image>openjdk-8:alpine</image>
-    				</from>
-    				<container>
-    				<ports>
-    					<port>8082</port>
-    				</ports>
-    				</container>
     				<to>
-      				<image>kumaranraj/jib-maven:v3</image>
+      				<image>kumaranraj/jib-maven:v1</image>
     				</to>
   				</configuration>
-		    </plugin>
+		    </plugin>	-->
 		
 		
 			<plugin>
